<resources>
    <string name="app_name">N Samples</string>

    <string name="write_toast_label">Type a text and click on the button to launch a Toast</string>
    <string name="write_toast">Content of the toast</string>
    <string name="button_launch_toast">Toast!</string>

    <string name="bt_notification_toast_text">Notification Toast</string>

    <string name="bt_go_to_notifications">Notifications</string>
    <string name="bt_go_to_tiles">Tiles - Quick Settings</string>

    <string name="launch_toast_notification_title">Toast</string>
    <string name="launch_toast_notification_text">You\'re allowed to launch a toast</string>
    <string name="launch_toast_action">Try it now!</string>

    <plurals name="mail_notification_title">
        <item quantity="one">%d new email</item>
        <item quantity="other">%d new emails</item>
    </plurals>

    <string name="mail_notification_label">Click the button to launch a 3 messages notification</string>
    <string name="bt_notification_mail_text">Notification Email</string>

    <string name="bank_operation_notification_title">Bank Account XXX</string>
    <string name="bank_operation_notification_text">New operation : %.2f €</string>
    <string name="bank_operation_custom_notification_text">New operation</string>
    <string name="bank_operation_custom_notification_amount_format">%.2f €</string>
    <string name="bank_notification_label">Click the button to launch a bank operation notification</string>
    <string name="bt_notification_bank_text">Notification Bank</string>

    <string name="enable_notifications">Enable Notifications</string>
    <string name="disable_notifications">Disable Notifications</string>

    <string name="tile_label">NSamples Notifications</string>
    <string name="tile_label_enabled">Notifications Enabled</string>
    <string name="tile_label_disabled">Notifications Disabled</string>
</resources>
